Check interpretera Julka

--- a/Lab 1 - drzewa/Decision_trees_Kot_Samp.ipynb
+++ b/Lab 1 - drzewa/Decision_trees_Kot_Samp.ipynb
@@ -9,18 +9,26 @@
     "Autorstwa:\n",
     "- Wojciech Kot  151879\n",
     "- Julia Samp    151775\n",
-    "z grupy L7, zajęcia piątkowe 11:45\n",
-    "\n",
-    "\n",
-    "\n",
-    "--- workspace ---\n",
+    "z grupy L7, zajęcia piątkowe 11:45"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "--- workspace - usunąć przed wysłaniem ---\n",
     "• entropy calculation,\n",
     "• conditional entropy calculation,\n",
     "• information gain calculation,\n",
     "• gain ratio calculation,\n",
     "• simple drawing of a decision tree (there can be really primitive way of\n",
     "drawing or usage of any ready package to do only this drawing) with the\n",
-    "information how many examples of each class are in each leaf."
+    "information how many examples of each class are in each leaf.\n",
+    "\n",
+    "\n",
+    "- biblioteka treelib może być przydatna"
    ],
    "metadata": {
     "collapsed": false
@@ -28,9 +36,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
-   "source": [],
+   "source": [
+    "# kod\n"
+   ],
    "metadata": {
     "collapsed": false
    }
