entropia test jupyter

--- a/Lab 1 - drzewa/Decision_trees_Kot_Samp.ipynb
+++ b/Lab 1 - drzewa/Decision_trees_Kot_Samp.ipynb
@@ -36,11 +36,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [],
-   "source": [
-    "# kod\n"
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9182958340544896\n"
+     ]
+    }
    ],
+   "source": [
+    "# kod\n",
+    "import math\n",
+    "\n",
+    "def entropia(lista):\n",
+    "    e = 0\n",
+    "    suma = sum(lista)\n",
+    "    for i in lista:\n",
+    "        e -= (i/suma) * math.log(i/suma, 2)\n",
+    "    return e\n",
+    "\n",
+    "print(entropia([2, 4]))\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
