--- a/Lab 1 - drzewa/Decision_trees_Kot_Samp.ipynb
+++ b/Lab 1 - drzewa/Decision_trees_Kot_Samp.ipynb
@@ -18,17 +18,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "--- workspace - usunąć przed wysłaniem ---\n",
-    "• entropy calculation,\n",
-    "• conditional entropy calculation,\n",
-    "• information gain calculation,\n",
-    "• gain ratio calculation,\n",
-    "• simple drawing of a decision tree (there can be really primitive way of\n",
-    "drawing or usage of any ready package to do only this drawing) with the\n",
-    "information how many examples of each class are in each leaf.\n",
-    "\n",
-    "\n",
-    "- biblioteka treelib może być przydatna"
+    "Step - by - step - Wersja podstawowa (pro znajduje się poniżej)"
    ],
    "metadata": {
     "collapsed": false
@@ -37,27 +27,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.9182958340544896\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# kod\n",
-    "import math\n",
+    "import pandas\n",
     "\n",
-    "def entropia(lista):\n",
-    "    e = 0\n",
-    "    suma = sum(lista)\n",
-    "    for i in lista:\n",
-    "        e -= (i/suma) * math.log(i/suma, 2)\n",
-    "    return e\n",
+    "def prepare_pandas_df_for_basic_problem(path):\n",
+    "    data = pandas.read_csv(path)\n",
+    "    data = data.drop(['PassengerId', 'Name'], axis=1)\n",
+    "    data['Age'] = pandas.cut(data['Age'], bins=[0, 20, 40, 100], labels=['young', 'middle', 'old'], right=True)\n",
+    "    return data\n",
     "\n",
-    "print(entropia([2, 4]))\n"
+    "# wariant bazowy, a więc wgrywamy do dataframe'u (bo już używamy pandas do czytania csv, żeby nie robić tego na piechotę)\n",
+    "# dane, z których wyrzucamy niepotrzebne kolumny PassengerId oraz Name, a następnie mapujemy wiek na 3 zmienne young, middle i old\n",
+    "#"
    ],
    "metadata": {
     "collapsed": false
