tylko maina i sprawko zrobić i jest done

--- a/Lab 1 - drzewa/Decision_trees_Kot_Samp.ipynb
+++ b/Lab 1 - drzewa/Decision_trees_Kot_Samp.ipynb
@@ -100,7 +100,7 @@
     "\n",
     "\n",
     "def get_column_names(df):\n",
-    "    return df.columns.tolist()\n",
+    "    return [col for col in df.columns if col != \"Survived\"]\n",
     "\n",
     "\n",
     "def entropy(lista):\n",
