Jupyter 4.0 sprawko upgrades

--- a/Lab 1 - drzewa/Decision_trees_Kot_Samp.ipynb
+++ b/Lab 1 - drzewa/Decision_trees_Kot_Samp.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 42,
    "outputs": [
     {
      "name": "stdout",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 43,
    "outputs": [],
    "source": [
     "# Aby wiedzieć ILE i jakie rozgałęzienia będzie miało nasze drzewo, gdy podzielimy na tym atrybucie\n",
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 44,
    "outputs": [],
    "source": [
     "import math\n",
@@ -191,48 +191,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 45,
    "outputs": [],
    "source": [
-    "def build_tree(df, tree, columns, parent=None, parent_id=\"root\"):\n",
-    "    best_gain = 0.0\n",
-    "    best_column = None\n",
-    "\n",
-    "    for column in columns:\n",
-    "        ig = information_gain(split(df, column))\n",
-    "        if ig > best_gain:\n",
-    "            best_gain = ig\n",
-    "            best_column = column\n",
-    "\n",
-    "    # warunek stopu rekurencji\n",
-    "    if best_gain == 0 or len(columns) == 0:\n",
-    "        return\n",
-    "\n",
-    "    # odfiltrowanie atrybutu, na podstawie którego właśnie dokonaliśmy podziału\n",
-    "    remaining_columns = columns.copy()\n",
-    "    remaining_columns.remove(best_column)\n",
-    "\n",
-    "    # unikalne node_id składa się z nazwy kolumny, na jakiej robimy podział w tym rozgałęzieniu, oraz id rodzica w drzewie, ponieważ bez tej drugiej części id nie byłoby unikalne\n",
-    "    node_id = f\"{best_column}_{parent_id}\"\n",
-    "    tree.create_node(best_column, node_id, parent=parent)\n",
-    "\n",
-    "    # A tu rekurencyjne wywołanie, aby zbudować całe drzewo, od korzenia aż do liści\n",
-    "    for val in possible_values(df, best_column):\n",
-    "        filtered_df = df[df[best_column] == val]\n",
-    "        child_id = f\"{node_id}_{val}\"\n",
-    "        build_tree(filtered_df, tree, remaining_columns, node_id, child_id)\n",
-    "\n",
-    "\n",
-    "# Ta sama funkcja, ale buduje drzewo razem z liśćmi zawierającymi decyzję\n",
     "def build_tree_with_decision(df, tree, columns, parent=None, parent_id=\"root\"):\n",
-    "\n",
-    "    # Jeśli decyzja jest 100% pewna, to liść\n",
+    "    # Jeżeli mamy pewną decyzję, to dodajemy liść z tą decyzją\n",
     "    if len(df['Survived'].unique()) == 1:\n",
-    "        decision = df['Survived'].values[0]\n",
-    "        tree.create_node(f\"{decision}\", parent_id, parent=parent)\n",
+    "        # decision = \"Survived\" if df['Survived'].values[0] == 1 else \"Dead\"\n",
+    "        count_survived = len(df[df['Survived'] == 1])\n",
+    "        count_dead = len(df[df['Survived'] == 0])\n",
+    "        if df['Survived'].values[0] == 1:\n",
+    "            tree.create_node(f\"Survived: {count_survived}\", parent_id, parent=parent)\n",
+    "        else:\n",
+    "            tree.create_node(f\"Dead: {count_dead}\", parent_id, parent=parent)\n",
     "        return\n",
     "\n",
-    "    # reszta funkcji jest dokładnie taka sama\n",
+    "    # Liczymy info-gain dla każdego możliwego w tym momencie podziału\n",
     "    best_gain = 0.0\n",
     "    best_column = None\n",
     "    for column in columns:\n",
@@ -240,16 +214,31 @@
     "        if ig > best_gain:\n",
     "            best_gain = ig\n",
     "            best_column = column\n",
+    "\n",
+    "    # Dodatkowy warunek stopu rekurencji (nigdy nie powinien zajść przy braku sprzecznych danych, ale chroni przed błędami)\n",
     "    if best_gain == 0 or len(columns) == 0:\n",
+    "        count_survived = len(df[df['Survived'] == 1])\n",
+    "        count_dead = len(df[df['Survived'] == 0])\n",
+    "        # Tworzy liść z wynikiem\n",
+    "        tree.create_node(f\"Survived: ? (Survived: {count_survived}, Dead: {count_dead})\", parent_id, parent=parent)\n",
     "        return\n",
+    "\n",
+    "    # kolumnę na podstawię której właśnie dzielimy, usuwamy, przekazując do węzła-dziecka\n",
     "    remaining_columns = columns.copy()\n",
     "    remaining_columns.remove(best_column)\n",
+    "    # Nadajemy unikalne node_id, składające się z nazwy atrybutu, na podstawie którego dzielimy (best_column), oraz id węzła-rodzica, tak aby zapewnić unikalność w całym drzewie\n",
     "    node_id = f\"{best_column}_{parent_id}\"\n",
-    "    tree.create_node(best_column, node_id, parent=parent)\n",
+    "\n",
+    "    # Zliczamy parametry w danym węźle i dodajemy go do drzewa\n",
+    "    count_survived = len(df[df['Survived'] == 1])\n",
+    "    count_dead = len(df[df['Survived'] == 0])\n",
+    "    tree.create_node(f\"{best_column} (Survived: {count_survived}, Dead: {count_dead})\", node_id, parent=parent)\n",
+    "\n",
+    "    # Rekurencyjnie budujemy dalej całe drzewo, przekazując do węzła-dziekca parametry pomniejszone o zużyty już parametr, oraz odpowiednio odfiltrowane dane (df i kolumn) oraz swoje id, które użyje do nadania sobie id.\n",
     "    for val in possible_values(df, best_column):\n",
     "        filtered_df = df[df[best_column] == val]\n",
-    "        child_id = f\"{node_id}_{val}\"\n",
-    "        build_tree_with_decision(filtered_df, tree, remaining_columns, node_id, child_id)\n"
+    "        id_for_child = f\"{node_id}_{val}\"\n",
+    "        build_tree_with_decision(filtered_df, tree, remaining_columns, node_id, id_for_child)\n"
    ],
    "metadata": {
     "collapsed": false
@@ -266,64 +255,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 46,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sex\n",
-      "├── Pclass\n",
-      "│   ├── Age\n",
-      "│   │   ├── 0\n",
-      "│   │   ├── SibSp\n",
-      "│   │   │   ├── 0\n",
-      "│   │   │   └── 1\n",
-      "│   │   └── SibSp\n",
-      "│   │       ├── 0\n",
-      "│   │       └── 1\n",
-      "│   ├── Age\n",
-      "│   │   ├── 0\n",
-      "│   │   ├── 0\n",
-      "│   │   └── 1\n",
-      "│   └── Parch\n",
-      "│       ├── 0\n",
-      "│       ├── 0\n",
-      "│       ├── 0\n",
-      "│       ├── 0\n",
-      "│       └── Age\n",
-      "│           ├── 0\n",
-      "│           └── 1\n",
-      "└── SibSp\n",
-      "    ├── 0\n",
-      "    ├── 0\n",
-      "    ├── 1\n",
-      "    ├── 1\n",
-      "    ├── Age\n",
-      "    │   ├── 0\n",
-      "    │   └── 1\n",
-      "    └── Pclass\n",
-      "        ├── 1\n",
-      "        ├── 1\n",
-      "        └── Parch\n",
-      "            ├── 0\n",
-      "            ├── 1\n",
-      "            └── 1\n",
-      "\n",
-      "======Separator======\n",
-      "\n",
-      "Sex\n",
-      "├── Pclass\n",
-      "│   ├── Age\n",
-      "│   │   ├── SibSp\n",
-      "│   │   └── SibSp\n",
-      "│   ├── Age\n",
-      "│   └── Parch\n",
-      "│       └── Age\n",
-      "└── SibSp\n",
-      "    ├── Age\n",
-      "    └── Pclass\n",
-      "        └── Parch\n",
+      "Sex (Survived: 40, Dead: 60)\n",
+      "├── Pclass (Survived: 7, Dead: 53)\n",
+      "│   ├── Age (Survived: 2, Dead: 7)\n",
+      "│   │   ├── Dead: 1\n",
+      "│   │   ├── Dead: 6\n",
+      "│   │   └── Survived: 2\n",
+      "│   ├── Age (Survived: 4, Dead: 9)\n",
+      "│   │   ├── Dead: 7\n",
+      "│   │   ├── SibSp (Survived: 1, Dead: 1)\n",
+      "│   │   │   ├── Dead: 1\n",
+      "│   │   │   └── Survived: 1\n",
+      "│   │   └── SibSp (Survived: 3, Dead: 1)\n",
+      "│   │       ├── Dead: 1\n",
+      "│   │       └── Survived: 3\n",
+      "│   └── Parch (Survived: 1, Dead: 37)\n",
+      "│       ├── Age (Survived: 1, Dead: 3)\n",
+      "│       │   ├── Dead: 3\n",
+      "│       │   └── Survived: 1\n",
+      "│       ├── Dead: 1\n",
+      "│       ├── Dead: 1\n",
+      "│       ├── Dead: 29\n",
+      "│       └── Dead: 3\n",
+      "└── SibSp (Survived: 33, Dead: 7)\n",
+      "    ├── Age (Survived: 2, Dead: 1)\n",
+      "    │   ├── Dead: 1\n",
+      "    │   └── Survived: 2\n",
+      "    ├── Dead: 1\n",
+      "    ├── Dead: 1\n",
+      "    ├── Pclass (Survived: 11, Dead: 4)\n",
+      "    │   ├── Parch (Survived: 2, Dead: 4)\n",
+      "    │   │   ├── Dead: 4\n",
+      "    │   │   ├── Survived: 1\n",
+      "    │   │   └── Survived: 1\n",
+      "    │   ├── Survived: 4\n",
+      "    │   └── Survived: 5\n",
+      "    ├── Survived: 1\n",
+      "    └── Survived: 19\n",
       "\n"
      ]
     }
@@ -335,13 +309,7 @@
     "decision_tree = Tree()\n",
     "columns = get_column_names(dane)\n",
     "build_tree_with_decision(dane, decision_tree, columns)\n",
-    "print(decision_tree.show(stdout=False))\n",
-    "\n",
-    "print(\"======Separator======\\n\")\n",
-    "\n",
-    "decision_tree2 = Tree()\n",
-    "build_tree(dane, decision_tree2, columns)\n",
-    "print(decision_tree2.show(stdout=False))"
+    "print(decision_tree.show(stdout=False))"
    ],
    "metadata": {
     "collapsed": false
@@ -360,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 47,
    "outputs": [],
    "source": [
     "# todo"
