Jupyter 4.0 sprawko DONE FINALLY

--- a/Lab 1 - drzewa/Decision_trees_Kot_Samp.ipynb
+++ b/Lab 1 - drzewa/Decision_trees_Kot_Samp.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 48,
    "outputs": [
     {
      "name": "stdout",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 49,
    "outputs": [],
    "source": [
     "# Aby wiedzieć ILE i jakie rozgałęzienia będzie miało nasze drzewo, gdy podzielimy na tym atrybucie\n",
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 50,
    "outputs": [],
    "source": [
     "import math\n",
@@ -191,13 +191,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 51,
    "outputs": [],
    "source": [
     "def build_tree_with_decision(df, tree, columns, parent=None, parent_id=\"root\"):\n",
     "    # Jeżeli mamy pewną decyzję, to dodajemy liść z tą decyzją\n",
     "    if len(df['Survived'].unique()) == 1:\n",
-    "        # decision = \"Survived\" if df['Survived'].values[0] == 1 else \"Dead\"\n",
     "        count_survived = len(df[df['Survived'] == 1])\n",
     "        count_dead = len(df[df['Survived'] == 0])\n",
     "        if df['Survived'].values[0] == 1:\n",
@@ -232,13 +231,16 @@
     "    # Zliczamy parametry w danym węźle i dodajemy go do drzewa\n",
     "    count_survived = len(df[df['Survived'] == 1])\n",
     "    count_dead = len(df[df['Survived'] == 0])\n",
-    "    tree.create_node(f\"{best_column} (Survived: {count_survived}, Dead: {count_dead})\", node_id, parent=parent)\n",
+    "\n",
+    "    # Tutaj dodajemy do drzewa właśnie przetwarzany węzeł\n",
+    "    param = parent_id.split('_')[-1]\n",
+    "    tree.create_node(f\"{param} - {best_column} (Survived: {count_survived}, Dead: {count_dead})\", node_id, parent=parent)\n",
     "\n",
     "    # Rekurencyjnie budujemy dalej całe drzewo, przekazując do węzła-dziekca parametry pomniejszone o zużyty już parametr, oraz odpowiednio odfiltrowane dane (df i kolumn) oraz swoje id, które użyje do nadania sobie id.\n",
     "    for val in possible_values(df, best_column):\n",
     "        filtered_df = df[df[best_column] == val]\n",
     "        id_for_child = f\"{node_id}_{val}\"\n",
-    "        build_tree_with_decision(filtered_df, tree, remaining_columns, node_id, id_for_child)\n"
+    "        build_tree_with_decision(filtered_df, tree, remaining_columns, node_id, id_for_child)"
    ],
    "metadata": {
     "collapsed": false
@@ -255,49 +257,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 52,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sex (Survived: 40, Dead: 60)\n",
-      "├── Pclass (Survived: 7, Dead: 53)\n",
-      "│   ├── Age (Survived: 2, Dead: 7)\n",
-      "│   │   ├── Dead: 1\n",
-      "│   │   ├── Dead: 6\n",
-      "│   │   └── Survived: 2\n",
-      "│   ├── Age (Survived: 4, Dead: 9)\n",
-      "│   │   ├── Dead: 7\n",
-      "│   │   ├── SibSp (Survived: 1, Dead: 1)\n",
-      "│   │   │   ├── Dead: 1\n",
+      "root - Sex (Survived: 40, Dead: 60)\n",
+      "├── female - SibSp (Survived: 33, Dead: 7)\n",
+      "│   ├── 1 - Pclass (Survived: 11, Dead: 4)\n",
+      "│   │   ├── 3 - Parch (Survived: 2, Dead: 4)\n",
+      "│   │   │   ├── Dead: 4\n",
+      "│   │   │   ├── Survived: 1\n",
       "│   │   │   └── Survived: 1\n",
-      "│   │   └── SibSp (Survived: 3, Dead: 1)\n",
-      "│   │       ├── Dead: 1\n",
-      "│   │       └── Survived: 3\n",
-      "│   └── Parch (Survived: 1, Dead: 37)\n",
-      "│       ├── Age (Survived: 1, Dead: 3)\n",
-      "│       │   ├── Dead: 3\n",
-      "│       │   └── Survived: 1\n",
-      "│       ├── Dead: 1\n",
-      "│       ├── Dead: 1\n",
-      "│       ├── Dead: 29\n",
-      "│       └── Dead: 3\n",
-      "└── SibSp (Survived: 33, Dead: 7)\n",
-      "    ├── Age (Survived: 2, Dead: 1)\n",
+      "│   │   ├── Survived: 4\n",
+      "│   │   └── Survived: 5\n",
+      "│   ├── 3 - Age (Survived: 2, Dead: 1)\n",
+      "│   │   ├── Dead: 1\n",
+      "│   │   └── Survived: 2\n",
+      "│   ├── Dead: 1\n",
+      "│   ├── Dead: 1\n",
+      "│   ├── Survived: 1\n",
+      "│   └── Survived: 19\n",
+      "└── male - Pclass (Survived: 7, Dead: 53)\n",
+      "    ├── 1 - Age (Survived: 4, Dead: 9)\n",
+      "    │   ├── Dead: 7\n",
+      "    │   ├── middle - SibSp (Survived: 3, Dead: 1)\n",
+      "    │   │   ├── Dead: 1\n",
+      "    │   │   └── Survived: 3\n",
+      "    │   └── young - SibSp (Survived: 1, Dead: 1)\n",
+      "    │       ├── Dead: 1\n",
+      "    │       └── Survived: 1\n",
+      "    ├── 2 - Age (Survived: 2, Dead: 7)\n",
       "    │   ├── Dead: 1\n",
+      "    │   ├── Dead: 6\n",
       "    │   └── Survived: 2\n",
-      "    ├── Dead: 1\n",
-      "    ├── Dead: 1\n",
-      "    ├── Pclass (Survived: 11, Dead: 4)\n",
-      "    │   ├── Parch (Survived: 2, Dead: 4)\n",
-      "    │   │   ├── Dead: 4\n",
-      "    │   │   ├── Survived: 1\n",
-      "    │   │   └── Survived: 1\n",
-      "    │   ├── Survived: 4\n",
-      "    │   └── Survived: 5\n",
-      "    ├── Survived: 1\n",
-      "    └── Survived: 19\n",
+      "    └── 3 - Parch (Survived: 1, Dead: 37)\n",
+      "        ├── 1 - Age (Survived: 1, Dead: 3)\n",
+      "        │   ├── Dead: 3\n",
+      "        │   └── Survived: 1\n",
+      "        ├── Dead: 1\n",
+      "        ├── Dead: 1\n",
+      "        ├── Dead: 29\n",
+      "        └── Dead: 3\n",
       "\n"
      ]
     }
@@ -328,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 53,
    "outputs": [],
    "source": [
     "# todo"
